fix TransformFrameRectToAncestor call in DoubleTapToZoom for fixed content where the ancestor frame isn't an ancestor
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
People
(Reporter: tnikkel, Assigned: tnikkel)
References
Details
(Whiteboard: [proton-uplift])
Attachments
(3 files, 1 obsolete file)
|
3.53 KB,
text/html
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
Bug 1705599 made the calculation we do in nsLayoutUtils::GetBoundingFrameRect work if its inside fixed content. But bug 1701749 added a similar calculation in DoubleTapToZoom.cpp which we didn't fix up for the same problem.
| Assignee | ||
Comment 1•5 years ago
|
||
Bug 1705599 made the calculation we do in nsLayoutUtils::GetBoundingFrameRect work if its inside fixed content. But bug 1701749 added a similar calculation in DoubleTapToZoom.cpp which we didn't fix up for the same problem.
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
Comment on attachment 9218864 [details]
Bug 1707557. Add test. r?botond,emilio
Revision D113623 was moved to bug 1707234. Setting attachment 9218864 [details] to obsolete.
Comment 6•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/869a82f47afa
https://hg.mozilla.org/mozilla-central/rev/24f512e5e212
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9218315 [details]
Bug 1707557. Fix TransformFrameRectToAncestor call in DoubleTapToZoom for fixed content where the ancestor frame isn't guaranteed to be an ancestor r?botond
Beta/Release Uplift Approval Request
- User impact if declined: double tap inside some fixed content will choose a not ideal rect to zoom to
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): just changes code from assuming one node is an ancestor of another to allow them to not be ancestors
- String changes made/needed:
| Assignee | ||
Updated•5 years ago
|
Comment on attachment 9218315 [details]
Bug 1707557. Fix TransformFrameRectToAncestor call in DoubleTapToZoom for fixed content where the ancestor frame isn't guaranteed to be an ancestor r?botond
Approved for 89 beta 7, thanks.
Comment 9•5 years ago
|
||
| bugherder uplift | ||
https://hg.mozilla.org/releases/mozilla-beta/rev/69d5ff79a28c
https://hg.mozilla.org/releases/mozilla-beta/rev/6c6f59e623d7
Description
•