Bug 1707557. Fix TransformFrameRectToAncestor call in DoubleTapToZoom for fixed content where the ancestor frame isn't guaranteed to be an ancestor r=emilio a=pascalc

Bug 1705599 made the calculation we do in nsLayoutUtils::GetBoundingFrameRect work if its inside fixed content. But bug 1701749 added a similar calculation in DoubleTapToZoom.cpp which we didn't fix up for the same problem.

Differential Revision: https://phabricator.services.mozilla.com/D113334